use letter-spacing to fix dynamic width

--- a/components/tabs/style/index.less
+++ b/components/tabs/style/index.less
@@ -211,7 +211,8 @@
 
       &-active {
         color: @tabs-highlight-color;
-        text-shadow: 0 0 0.1px;
+        font-size: 500;
+        letter-spacing: -0.013678em;
       }
 
       &-disabled {
